default/objects/E2E_Form_CRM_Settings__c/E2E_Form_CRM_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CRM settings for E2EFormRu</description>
    <label>E2E Form CRM Settings</label>
</CustomObject>