default/objects/E2E_Form_CRM_Settings__c/fields/Task_Case_Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Case_Origin_Code__c</fullName>
    <label>Task Case Origin Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>