default/objects/E2E_Form_CRM_Settings__c/fields/Task_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Task_OwnerId__c</fullName>
    <description>Owner Id for a Task</description>
    <label>Task OwnerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>