default/objects/E2E_Form_CRM_Settings__c/fields/Task_SubjectId__c.field-meta.xml
<CustomField>
    <fullName>Task_SubjectId__c</fullName>
    <description>Id of a subject for CRM task</description>
    <label>Task SubjectId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>