default/objects/E2E_Form_CRM_Settings__c/fields/Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Task_Title__c</fullName>
    <description>Title for CRM task</description>
    <label>Task Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>